# money-roundup

./: .gitignore  Dockerrun.aws.json  PROJECT_PLAN.md  README.md  amplify.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: run_test.yml  tests.yml
app/: moneyroundup.db
app/src/: conftest.py  database.py  dependencies.py  fetch_transactions.py  main.py  models.py  moneyroundup.db  plaid_manager.py  settings.py  test_token.py  test_user.py
backend/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg  windows_requirements.txt
backend/app/: database.py  main.py  models.py  moneyroundup.db  schemas.py  settings.py
backend/moneyroundup/: database.py  dependencies.py  main.py  (+3 more)
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: .env.example  Dockerfile  Dockerrun.aws.json  pyproject.toml  requirements.txt  requirements_windows.txt  run_tests.sh  setup.py
src/moneyroundup/: __init__.py  auth.py  database.py  dependencies.py  fetch_transactions.py  main.py  models.py  plaid_manager.py  rabbit_manager.py  schemas.py  settings.py  supabase_client.py  users.py
src/moneyroundup/api/: api.py
src/moneyroundup/routers/: account.py  auth.py  goals.py  item.py  token.py  user.py
src/moneyroundup/sender_service/: receiver.py  sender.py
src/moneyroundup/services/: email.py  secret_manager.py
src/tests/: conftest.py  test_auth.py  test_fetch_transactions.py  test_goals.py  test_link_token.py  test_token.py  test_user.py
(+41 files in other folders)
